syntax = "proto3";

package Nebula.Services.Fragments.Authentication;
import "google/protobuf/timestamp.proto";
import "Protos/Nebula/Services/Fragments/Shared/OrganizationRoleAssignment.proto";

message UserPublicRecord {
	string UserId = 1;
	string UserName = 2;
	string DisplayName = 3;
	string FirstName = 4;
	string LastName = 5;
	repeated string Identites = 6;

	google.protobuf.Timestamp CreatedUTC = 7;
	google.protobuf.Timestamp LastModifiedUTC = 8;
	google.protobuf.Timestamp LastLoginUTC = 9;
	google.protobuf.Timestamp DisabledUtc = 10;
}

message UserPrivateRecord {
	string Email = 1;
	repeated string Roles = 2;
	repeated Nebula.Services.Fragments.Shared.OrganizationRoleAssignment OrganizationRoles = 3;
}

message UserServerRecord {
	bytes PasswordHash = 1;
	bytes PasswordSalt = 2;
}

message UserFullRecord {
	UserPublicRecord Public = 1;
	UserPrivateRecord Private = 2;
	UserServerRecord Server = 3;
}

message UserRecord {
	UserPublicRecord Public = 1;
	UserPrivateRecord Private = 2;
}